force-app/main/default/objects/HDT_ProtocolSpecificEmail__mdt/HDT_ProtocolSpecificEmail__mdt.object-meta.xml
<CustomObject>
    <label>HDT_ProtocolSpecificEmail</label>
    <pluralLabel>HDT_ProtocolSpecificEmails</pluralLabel>
</CustomObject>