force-app/main/default/objects/HDT_ProtocolSpecificEmail__mdt/fields/CompanyOwner__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwner__c</fullName>
    <label>Company Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AAA-EBT</fullName>
                <default>true</default>
                <label>AAA-EBT</label>
            </value>
            <value>
                <fullName>HERA COMM</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>