force-app/main/default/objects/HDT_ProtocolSpecificEmail__mdt/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Protocollo - Da tipizzare</fullName>
                <default>true</default>
                <label>Protocollo - Da tipizzare</label>
            </value>
            <value>
                <fullName>Protocollo - Attivazioni</fullName>
            </value>
            <value>
                <fullName>Protocollo - Voltura</fullName>
            </value>
            <value>
                <fullName>Protocollo - VAS</fullName>
            </value>
            <value>
                <fullName>Protocollo - Disattivazioni</fullName>
            </value>
            <value>
                <fullName>Protocollo - Preventivi</fullName>
            </value>
            <value>
                <fullName>Protocollo - Verifiche</fullName>
            </value>
            <value>
                <fullName>Protocollo - Reclami</fullName>
            </value>
            <value>
                <fullName>Protocollo - Pagamenti</fullName>
            </value>
            <value>
                <fullName>Protocollo - Morosità</fullName>
            </value>
            <value>
                <fullName>Protocollo - Canone Rai</fullName>
            </value>
            <value>
                <fullName>Protocollo - Fatturazione</fullName>
            </value>
            <value>
                <fullName>Protocollo - Autolettura</fullName>
            </value>
            <value>
                <fullName>Protocollo - Modifiche Anagrafiche</fullName>
            </value>
            <value>
                <fullName>Protocollo - Variazioni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>