force-app/main/default/objects/HDT_ProtocolSpecificEmail__mdt/listViews/Tutte_le_Mailbox.listView-meta.xml
<ListView>
    <fullName>Tutte_le_Mailbox</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>CompanyOwner__c</columns>
    <columns>Type__c</columns>
    <columns>Cluster__c</columns>
    <columns>Process__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tutte le Mailbox</label>
    <language>en_US</language>
</ListView>